# simplestclaw

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop-release.yml
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/scripts/: build-sidecar.js
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: config.rs  lib.rs  main.rs  sidecar.rs
apps/desktop/src/components/: Chat.tsx  Loading.tsx  Settings.tsx
apps/desktop/src/components/settings/: GeneralTab.tsx
apps/desktop/src/lib/: store.ts  tauri.ts
apps/gateway/: railway-templates.json  server.js
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/chat/: page.tsx
