[package]
name = "simplestclaw-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
thiserror = "1"

[lib]
name = "simplestclaw_desktop"
crate-type = ["lib", "cdylib", "staticlib"]
